Update to java 24 +preview for structured concurrency.